--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <h1>Jamie, I miss you</h1>
 </div>
 <footer>
-    <p>made by <a href="https://codepen.io/juliepark"> julie</a> ♡
+    <p>made by <a href="https://neallab.github.io"> Neal</a> ♡
 </footer>
 <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
 <script id="rendered-js">
