--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
 <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
 <script id="rendered-js">
     const year = new Date().getFullYear();
-    const fourthOfJuly = new Date(2022, 1, 1).getTime();
-    console.log(fourthOfJuly);
+    const dDay = new Date(2022, 1, 1).getTime();
+    console.log(dDay);
 
     // countdown
     let timer = setInterval(function () {
@@ -280,7 +280,7 @@
         const today = new Date().getTime();
 
         // get the difference
-        const diff = fourthOfJuly - today;
+        const diff = dDay - today;
 
         // math
         let days = Math.floor(diff / (1000 * 60 * 60 * 24));
