Jamie, I miss you.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             position: relative;
             margin: auto;
             overflow: hidden;
-            width: 650px;
+            width: 800px;
             height: 480px;
         }
 
@@ -42,7 +42,7 @@
             text-align: center;
             text-transform: uppercase;
             font-family: "Lato", sans-serif;
-            font-size: .7em;
+            font-size: 1em;
             letter-spacing: 5px;
             margin-top: 5%;
         }
@@ -50,7 +50,7 @@
         .days, .hours, .minutes, .seconds {
             display: inline-block;
             padding: 20px;
-            width: 100px;
+            width: 150px;
             border-radius: 5px;
         }
 
