Jamie, I miss you.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         .days, .hours, .minutes, .seconds {
             display: inline-block;
             padding: 20px;
-            width: 150px;
+            width: 400px;
             border-radius: 5px;
         }
 
@@ -263,7 +263,7 @@
 <!--    </div>-->
 <!--    <h1>Jamie, I love you</h1>-->
     <div id="timer"></div>
-    <h1>Jamie, I miss you</h1>
+<!--    <h1>Jamie, I miss you</h1>-->
 </div>
 <footer>
     <p>made by <a href="https://neallab.github.io"> Neal</a> ♡
@@ -297,7 +297,8 @@
         // display
         document.getElementById("timer").innerHTML =
             "<div class=\"days\"> \
-            <div class=\"numbers\">" + days + "</div>days</div> \
+            <div class=\"numbers\">" + days + "</div>Jamie, I love you</div> \
+            <h1></h1>\
             </div>";
 
     }, 1000);
